--- a/index.html
+++ b/index.html
@@ -265,22 +265,19 @@
             </div>
             </div>
         </section>
-        <div>
-            <h3 class="header4">Skills</h3>
-            <section class="skills">
+            <div>
+                <h3 class="header4">Skills</h3>
             </div>
             <div class="skills-item">
-          <h4>Languages</h4>
-          <ul>
-            <li>HTML5</li>
-            <li>CSS3</li>
-            <li>JavaScript</li>
-            <li>Node.js</li>
-            <li>PHP</li>
-            <li>C#</li>
-          </ul>
-        </div>
-        </section>
+                <h4>Languages</h4>
+                <ul>
+                    <li><img src="html5.png" alt="HTML5">HTML5</li>
+                    <li><img src="css3.png" alt="CSS3">CSS3</li>
+                    <li><img src="js.png" alt="JavaScript">JavaScript</li>
+                    <li><img src="php-logo.png" alt="PHP">PHP</li>
+                    <li><img src="Csharp_Logo.png" alt="C#">C#</li>
+                </ul>
+            </div>
     </div>
 </body>
 </html>
