skills database and labraries done

--- a/index.html
+++ b/index.html
@@ -278,6 +278,22 @@
                     <li><img src="Csharp_Logo.png" alt="C#">C#</li>
                 </ul>
             </div>
+            <div class="skills-item2">
+                <h4>Database</h4>
+                <ul>
+                    <li><img src="mysql.png" alt="HTML5">MySQL</li>
+                    <li><img src="mongodb.png" alt="mongoDB">MongoDB</li>
+                    <li><img src="oracle.png" alt="oracle">Oracle</li>
+                </ul>
+            </div>
+            <div class="skills-item3">
+                <h4>Libraries</h4>
+                <ul>
+                    <li><img src="react.png" alt="React.js">React.js</li>
+                    <li><img src="bootstrap.png" alt="bootstrap">Bootstrap</li>
+                    <li><img src="Tailwind CSS.png" alt="tailwind">Tailwind CSS</li>
+                </ul>
+            </div>
     </div>
 </body>
 </html>
