--- a/index.html
+++ b/index.html
@@ -294,6 +294,22 @@
                     <li><img src="Tailwind CSS.png" alt="tailwind">Tailwind CSS</li>
                 </ul>
             </div>
+            <div class="skills-item">
+                <h4>Frameworks</h4>
+                <ul>
+                    <li><img src="angular.png" alt="angular">Angular</li>
+                    <li><img src="vuejs.png" alt="vuejs">Vue.js</li>
+                    <li><img src="expressjs.png" alt="expressjs">Express.js</li>
+                    <li><img src="nextjs.png" alt="nextjs">Next.js</li>
+                </ul>
+            </div>
+            <div class="skills-item2">
+                <h4>Other</h4>
+                <ul>
+                    <li><img src="git.png" alt="git">Git</li>
+                    <li><img src="github.png" alt="github">Github</li>
+                </ul>
+            </div>
     </div>
 </body>
 </html>
