all the sections are done

--- a/index.html
+++ b/index.html
@@ -310,6 +310,56 @@
                     <li><img src="github.png" alt="github">Github</li>
                 </ul>
             </div>
+            <div>
+                <h3 class="header4">Certifications</h3>
+                <div>
+                    <img width="400" height="400" src="Casablanca.jpg" alt="">
+                    <img width="400" height="400" src="rabat.jpg" alt="">
+                    <img width="400" height="400" src="dar america.jpg" alt="">
+                </div>
+            </div>
+            <div>
+                <h3 class="header4">Education</h3>
+            </div>
+                <div class="card-container">
+                <div class="card">
+                    <h2>KARABUK UNIVERSITY</h2>
+                    <p>karabuk, kilavuzlar mah, Turkey</p>
+                    <p><strong>Degree:</strong>Bachlor in Computer Engineering</p>
+                    <p><strong>CGPA:</strong>2.78</p>
+                    <p><strong>Relevant Courseworks:</strong></p>
+                    <ul>
+                      <li>Computer Architecture</li>
+                      <li>Data Structures and Algorithms</li>
+                      <li>Machine Learning</li>
+                    </ul>
+                  </div>
+                
+                  <!-- Card 2 -->
+                  <div class="card">
+                    <h2>Moulay idriss 1er high school</h2>
+                    <p>Bourgoun, Casablanca</p>
+                    <p><strong>Degree:</strong> Secondary School</p>
+                    <p><strong>CGPA:</strong> 14.67/20</p>
+                  </div>                
+                </div>
+                <div>
+                    <h3 class="header4">Contact</h3>
+                </div>
+                <section id="contact" class="contact">
+                    <div class="container">
+                        <h2>Contact Us</h2>
+                        <form>
+                            <input type="text" placeholder="Your Name" required>
+                            <input type="email" placeholder="Your Email" required>
+                            <textarea placeholder="Your Message" rows="4" required></textarea>
+                            <button type="submit">Send Message</button>
+                        </form>
+                    </div>
+                </section>
     </div>
+    <footer>
+        
+    </footer>
 </body>
 </html>
