--- a/index.html
+++ b/index.html
@@ -298,10 +298,9 @@
                     <li><img src="Tailwind CSS.png" alt="tailwind">Tailwind CSS</li>
                 </ul>
             </div>
-            <div class="skills-item">
+            <div class="skills-item3">
                 <h4>Frameworks</h4>
                 <ul>
-                    <li><img src="angular.png" alt="angular">Angular</li>
                     <li><img src="vuejs.png" alt="vuejs">Vue.js</li>
                     <li><img src="expressjs.png" alt="expressjs">Express.js</li>
                     <li><img src="nextjs.png" alt="nextjs">Next.js</li>
